--- a/CRM_app_updated/project/project/package.json
+++ b/CRM_app_updated/project/project/package.json
@@ -1,11 +1,11 @@
 {
-  "homepage": "https://CRM.github.io/CRM",
+  "homepage": "https://Atharva7713.github.io/CRM",
   "name": "vite-react-typescript-starter",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "predeploy": "npm run build",
+    "predeploy":"npm run deploy",
     "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "tsc && vite build",
