--- a/CRM_app_updated/project/project/package.json
+++ b/CRM_app_updated/project/project/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Atharva7713.github.io/CRM",
+  "homepage": "https://CRM.github.io/CRM",
   "name": "vite-react-typescript-starter",
   "private": true,
   "version": "0.0.0",
